@@ -50,6 +50,7 @@ SUCH DAMAGE.
 <td valign="top" align="left" width="90%">
 <ul>
   <li><a href="#overview">Overview</a>
+  <li><a href="#thanks">Thanks</a>
   <li><a href="#free">Is GXemul Free software?</a>
   <li><a href="#build">How to compile/build the emulator</a>
   <li><a href="#run">How to run the emulator</a>
@@ -69,7 +70,7 @@ SUCH DAMAGE.
 
 
 <a name="overview"></a>
-<h3>Overview:</h3>
+<h3>Overview</h3>
 
 GXemul is a framework for full-system computer architecture emulation. 
 Several processor architectures and machine types have been implemented. 
@@ -119,12 +120,28 @@ image. This works for example with DECstation emulation, <a href="dreamcast.html
 emulation</a>, or when booting from generic <a href="http://en.wikipedia.org/wiki/ISO9660">ISO9660</a>
 CDROM images if the kernel is included in the image as a plain file.
 
-<p>Thanks to (in no specific order) Joachim Buss, Olivier Houchard, Juli 
+
+
+
+
+<p><br>
+<a name="thanks"></a>
+<h3>Thanks</h3>
+
+Thanks to (in no specific order) Joachim Buss, Olivier Houchard, Juli 
 Mallett, Juan Romero Pardines, Carl van Schaik, Miod Vallat, Alec Voropay,
-Göran Weinholt, Alexander Yurchenko, and everyone else who has provided me
-with feedback.
+Göran Weinholt, Alexander Yurchenko, and everyone else who has provide
+feedback.
 
+<!--
 
+<p>In addition to feedback, the following individuals have contributed
+larger portions of code:
+<ul>
+	<li>TODO.
+</ul>
+
+-->
 
 
 
@@ -134,16 +151,16 @@ with feedback.
 <a name="free"></a>
 <h3>Is GXemul Free software?</h3>
 
-Yes. I have released GXemul under a Free license. The code in GXemul is
+Yes. GXemul is released under a Free license. The code in GXemul is
 Copyrighted software, it is <i>not</i> public domain. (If this is
 confusing to you, you might want to read up on the definitions of the
 four freedoms associated with Free software, <a
 href="http://www.gnu.org/philosophy/free-sw.html">http://www.gnu.org/philosophy/free-sw.html</a>.)
 
-<p>The code I have written is released under a 3-clause BSD-style license
-(or "revised BSD-style" if one wants to use <a
+<p>Most of the code is released under a 3-clause BSD-style license
+(or "revised BSD-style" if one wants to use <a 
 href="http://www.gnu.org/philosophy/bsd.html">GNU jargon</a>). Apart from
-the code I have written, some files are copied from other sources such as
+the main code, some files are copied from other sources such as
 NetBSD, for example header files containing symbolic names of bitfields in
 device registers. They are also covered by similar licenses, but with some
 additional clauses. The main point, however, is that the licenses require
@@ -153,15 +170,17 @@ copy or modification.
 <p>If you plan to redistribute GXemul <i>without</i> supplying the source
 code, then you need to comply with each individual source file some other
 way, for example by writing additional documentation containing copyright
-notes. I have not done this, since I do not plan on making distributions
-without source code. You need to check all individual files for details.
-The "easiest way out" if you plan to redistribute code from GXemul is, of
-course, to let it remain Free Software and simply include the source code.
+notes. (This is not done in the default distribution, since it is a source 
+code distribution. You need to check 
+all individual files for details. The <i>easiest way out</i> if you plan 
+to redistribute code from GXemul is, of course, to let it remain Free Software
+and simply include the source code.)
 
 <p>In case you want to reuse parts of GXemul, but you need to do that 
 under a different license (e.g. the
-<a href="http://www.gnu.org/licenses/gpl.html">GPL</a>), then contact me and 
-I can probably re-license/dual-license files on a case-by-case basis.
+<a href="http://www.gnu.org/licenses/gpl.html">GPL</a>), then contact
+the author of the files in question to see if the files can be
+dual-licensed.
 
 
 
@@ -169,7 +188,7 @@ I can probably re-license/dual-license files on a case-by-case basis.
 
 <p><br>
 <a name="build"></a>
-<h3>How to compile/build the emulator:</h3>
+<h3>How to compile/build the emulator</h3>
 
 Uncompress the .tar.gz distribution file, and run
 <pre>
@@ -195,7 +214,7 @@ environment variable values when running the <tt>configure</tt> script.
 
 <p><br>
 <a name="run"></a>
-<h3>How to run the emulator:</h3>
+<h3>How to run the emulator</h3>
 
 Once you have built GXemul, running it should be rather straight-forward.
 Running <tt><b>gxemul</b></tt> without arguments (or with the
@@ -266,10 +285,11 @@ architectures.)
 <h3>Which host architectures/platforms are supported?</h3>
 
 GXemul should compile and run on any modern host architecture (64-bit or 
-32-bit word-length). I generally test it on
-<a href="http://www.freebsd.org/platforms/amd64.html">FreeBSD/amd64</a> 7.0, 
+32-bit word-length). It is mostly tested on
+<a href="http://www.freebsd.org/platforms/amd64.html">FreeBSD/amd64</a> 7.x,
+and sometimes also on
 <a href="http://www.freebsd.org/platforms/alpha.html">FreeBSD/alpha</a> 4.9,
-sometimes also on Linux (various platforms), and every
+Linux (various platforms), and every
 now and then also on <a href="http://www.netbsd.org/">NetBSD</a> or
 <a href="http://www.openbsd.org/">OpenBSD</a> inside the emulator itself
 (various platforms).
@@ -292,7 +312,7 @@ the primary platform. Some functionality may be lost when running on Cygwin.
 
 <p><br>
 <a name="accuracy"></a>
-<h3>Emulation accuracy:</h3>
+<h3>Emulation accuracy</h3>
 
 GXemul is an instruction-level emulator; things that would happen in
 several steps within a real CPU are not taken into account (e.g. pipe-line
